added more jquery and bootstrap

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
         </div>
 
     </div>
-    <div id="outPopUp"></div>
+    <div id="outPopUp" class="container rounded">
+        <div id="sonOFoutPopUp" class="row mx-auto">
+        </div>
+    </div>
 
 </body>
 
